CPU frequency change goal 8-levels achieved, cheers

--- a/docs/变更说明-2017-09-30.md
+++ b/docs/变更说明-2017-09-30.md
@@ -10,7 +10,7 @@
 
 现在你可以直接享受 Apple 原生的电源管理了，包括两档变频（1.2 与 3.0GHz）、睡眠唤醒等，而不需要对系统文件打**任何**补丁。
 
-通过添加 SSDT ，变频档位增加到了5档 (1.2 / 3.0 / 3.1 / 3.2 / 3.3) 。
+通过添加 SSDT ，变频档位增加到了8档 (1.2 / 1.9 / 2.3 / 2.6 / 3.0 / 3.1 / 3.2 / 3.3) 。
 
 - 重写了 `DMI` 信息.
 
@@ -50,7 +50,7 @@
 
 1. SIP的开关就是 `Rt Variables` 中的 `CsrActiveConfig`。
 2. 设置成 `0x00` 就是完全打开。
-3.  `0x67` 就是完全禁止。
+3. `0x67` 就是完全禁止。
 4. 一旦完全打开SIP，你就得确保没有 **修改过**(打补丁也算) `/System/Library/Extensions` 下的任何驱动，也没有在其中 **安装** 任何未签名的驱动，***否则系统将无法启动！***
 
 ### 关于 `config-no-web-drive.plist` 和 `config-web-drive.plist`:
