--- a/docs/读我.md
+++ b/docs/读我.md
@@ -31,9 +31,9 @@ Bios 版本 2.46
 
 E2-2670 C2 与 C1的唯一区别，就是C2支持VT-d技术（硬件虚拟化，不是咱们说的VMware使用到的虚拟化技术），而C1不支持。咱们并不能用得到VT-d技术，所以就是白白多花钱了。而对于服务器来说，不支持VT-d的CPU就是有致命缺陷的，基本上白菜价就卖。
 
-使用本配置文件中的`HNX7946.rom`文件刷新你的BIOS以后，处理器频率有五档(1.2 / 3.0 / 3.1 / 3.2 / 3.3)。
+使用本配置文件中的`HNX7946.rom`文件刷新你的BIOS以后，直接安装系统处理器频率就有~~五档(1.2 / 3.0 / 3.1 / 3.2 / 3.3)~~八档（1.2 / 1.9 / 2.3 / 2.6 / 3.0 / 3.1 / 3.2 / 3.3）。
 
-**我正在努力实现更多档位的变频。**
+**~~我正在努力实现更多档位的变频。~~**一天内目标就达成啦：）
 
 不刷新BIOS的话，安装完系统以后你需要运行：
 
