1.DO NOT UPDATE YOUR SYSTEM 2.Changed to OsxAptioFix2

--- a/docs/读我.md
+++ b/docs/读我.md
@@ -57,6 +57,8 @@ Dota2 十分流畅，我已经很满意了 :)
 
 ## Graphic 2: GTX 1050TI
 
+**装好WEB DRIVER以后切记不要安装系统更新！！！**
+
 安装相应的 Web Driver 以后就可以驱动了。
 
 但是在 High Sierra 中，你得开启 SIP 以后才能安装上 Web Driver。如果你不开启 SIP ，也可以强行继续安装，但是装好以后没有图形加速效果。
