update apfs.efi to avoid log at startup

--- a/docs/读我.md
+++ b/docs/读我.md
@@ -6,6 +6,8 @@ English Version is [HERE](https://github.com/cheneyveron/clover-x79-e5-2670-gtx6
 
 2017/09/30：[这里](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/变更说明-2017-09-30.md)
 
+2017/10/10: 更新apfs.efi避免了开机界面打印Log。
+
 推荐你升级俺的最新版本之前，先看变更历史。
 
 # 配置说明:
