Add BIOS Tools, Remanaged Files

--- a/docs/chage-log-2017-09-30.md
+++ b/docs/chage-log-2017-09-30.md
@@ -26,8 +26,8 @@ For better performance.
 
 ### How to flush the bios?
 
-1. Make a bootable DOS U disk, with `MaxDos9.0.iso` using `USBWriter` or `UltraISO`.
-2. Download `fpt` flush tool and copy it into U disk together with `HNX7946.rom`.
+1. Make a bootable DOS U disk, with `/attachments/BIOS/Tools/DOS-Maker/MSDOS7.10.iso` using `USBWriter` or `UltraISO`. I attached UltraISO.
+2. `fpt` flush tool is inside `/attachments/BIOS/Tools/FTP`. Copy `fpt.exe` into U disk together with `X7946CV.ROM`.
 3. Boot into that U disk, and run `fpt -f HNX7946.rom`.
 
 ## 2. Change log of Clover
@@ -43,7 +43,7 @@ For better performance.
 
 ### A few comments:
 
-1. If you decide not to flush your BIOS, you may need to put `for-old-rom/dsdt/dsdt.aml` into `/EFI/Clover/ACPI/patches`.
+1. If you decide not to flush your BIOS, you may need to put `attachments/DSDT/dsdt.aml` into `/EFI/Clover/ACPI/patches`.
 2. Inside `drivers64UEFI`, I updated all old efi drivers and added `apfs.efi`. But `apfs.efi` will show several lines before Clover show up. If you do not use `APFS Filesystem`, just delete it.
 3. Updated `VoodooHDA.kext` to `2.9.0` which supports 5.1 sound.
 4. If you do not flush your BIOS, CPU requency will not change when SIP is turned on, in order to install `NVIDIA Web Driver`(version 378.10.10.10.15.114).
@@ -58,7 +58,7 @@ For better performance.
 ### About `config-no-web-drive.plist` and `config-web-drive.plist`:
 
 1. The only difference is that `config-web-drive.plist` enables full SIP.
-`config-no-web-drive.plist` disables full SIP.
+   `config-no-web-drive.plist` disables full SIP.
 2. `NVIDIA Web Driver`(version 378.10.10.10.15.114) requires full SIP in order to perform correctly.
 3. I would suggest that you have a fresh install of macOS High Sierra because in order to change CPU frequency, multiple kexts inside `S/L/E` are modified so system will fail to boot after SIP is turned on.
 
