--- a/docs/读我.md
+++ b/docs/读我.md
@@ -8,6 +8,8 @@ English Version is [HERE](https://github.com/cheneyveron/clover-x79-e5-2670-gtx6
 
 2017/10/10: 更新apfs.efi避免了开机界面打印Log。
 
+2017/10/28: 添加多种CPU的变频SSDT，添加BIOS刷新工具。感谢rampagedev.com。
+
 推荐你升级俺的最新版本之前，先看变更历史。
 
 # 配置说明:
