--- a/docs/变更说明-2017-09-30.md
+++ b/docs/变更说明-2017-09-30.md
@@ -24,9 +24,9 @@
 
 ### 如何刷新BIOS?
 
-1. 制作一个DOS启动U盘。推荐使用 `USBWriter` 或 `UltraISO` 将 `MaxDos9.0.iso` 镜像写入U盘。
-2. 下载 `fpt` 刷新工具，将它和`HNX7946.rom`一起复制到你的U盘.
-3. 启动U盘，进入DOS系统以后执行 `fpt -f HNX7946.rom`即可。
+1. 制作一个DOS启动U盘。推荐使用 `USBWriter` 或 `UltraISO(已附带)` 将 `/attachments/BIOS/Tools/DOS-Maker/MSDOS7.10.iso` 镜像写入U盘。
+2. 复制 `/attachments/BIOS/Tools/FPT/fpt.exe` 刷新工具，将它和`/attachments/BIOS/ROM/X7946CV.ROM`一起放你的U盘.
+3. 启动U盘，进入DOS系统以后执行 `fpt -f X7946CV.ROM`即可。
 
 ## 2. 对 Clover 做的变更
 
@@ -41,7 +41,7 @@
 
 ### 还要补充一些:
 
-1. 如果你不刷BIOS的话，你得把 `for-old-rom/dsdt/dsdt.aml` 再放进 `/EFI/Clover/ACPI/patches`里边。
+1. 如果你不刷BIOS的话，你得把 `/attachments/DSDT/dsdt.aml` 再放进 `/EFI/Clover/ACPI/patches`里边。
 2. 在 `drivers64UEFI`里边，俺不仅升级了现有驱动，还新增了一个 `apfs.efi`驱动。但是添加完它以后会闪一屏幕的代码再出来选系统的界面。所以如果你不需要 APFS 文件系统的话，可以删掉它来提升使用体验。
 3. 将 `VoodooHDA.kext` 升级到了 `2.9.0` ，已经支持 5.1 声道了。
 4. 如果你不刷BIOS的话，为了安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114)，你必须开启SIP，而一旦开启，CPU就不能变频了。 
