--- a/docs/读我.md
+++ b/docs/读我.md
@@ -2,6 +2,18 @@
 
 English Version is [HERE](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/读我.md).
 
+## 资助
+
+俺花费了一些时间和精力在上面，如果此项目帮助到了您，欢迎来资助我继续完善它。资助名单在最下方。
+
+注意：这不是有偿协助，俺的时间非常有限，遇到问题请尽量提交issues，自己摸索。
+
+Paypal : [paypal.me/cheneyveron](https://paypal.me/cheneyveron)
+
+![Alipay](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/IMG_0112.jpg)
+
+![Wechat Pay](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/IMG_0113.jpg)
+
 ## 变更历史:
 
 2017/09/30：[这里](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/变更说明-2017-09-30.md)
@@ -132,4 +144,3 @@ Tonymacx86.com: https://www.tonymacx86.com/threads/black-screen-with-macpro-6-1-
 还有整个的 bbs.pcbeta.com 与 insanelymac.com
 
 非常感激前辈们的贡献。
-
