--- a/docs/读我.md
+++ b/docs/读我.md
@@ -10,9 +10,7 @@ English Version is [HERE](https://github.com/cheneyveron/clover-x79-e5-2670-gtx6
 
 Paypal : [paypal.me/cheneyveron](https://paypal.me/cheneyveron)
 
-![Alipay](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/IMG_0112.jpg)
-
-![Wechat Pay](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/IMG_0113.jpg)
+![支付宝与微信支付](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/IMG_0112.jpg)
 
 ## 变更历史:
 
