--- a/docs/变更说明-2017-09-30.md
+++ b/docs/变更说明-2017-09-30.md
@@ -1,6 +1,8 @@
 # 更新记录(2017/09/30):
 
-## 1. 对 HNX7946.rom 所做的变更
+## 1. 对 HNX7946CV.rom 所做的变更
+
+- 注意，`HNX7946.rom`是原版BIOS.
 
 - 替换了 DSDT 表，修复了 `AppleACPIPlatform _isspace panic` 与 `USB`.
 
