修复10.13.1安装错误

--- a/docs/变更说明-2017-09-30.md
+++ b/docs/变更说明-2017-09-30.md
@@ -32,14 +32,14 @@
 
 ## 2. 对 Clover 做的变更
 
-- *版本*: 4220
-- *ACPI*: 删除掉了所有 ACPI 补丁.
+- *版本*: 4297
+- *ACPI*: 添加回了 ACPI 的USB等补丁.
 - *KextToPatch*: 保留了 Trim / Icon / AICPM 补丁.
 - *Gui*: 添加了启动项 `Install High Sierra!!!!`, 去掉了所有隐藏目录。这样一来，你就可以在 Fusion Drive上安装 macOS 了。
 - *Rt Variables*: `CsrActiveConfig` 设置成了 `0x00`, 即完全打开了 SIP (系统完整性保护).
 - `drivers64UEFI`: 添加了 `OsxAptioFix2Drv-free2000.efi` 从而 SIP 打开时能启动系统.
 - `driver64UEFI_Optional`: 可选的驱动，你可以从中选择一些来添加/替换。如果你不清楚该不该动，你就不要动。
-- `ACPI/Patched`: 去掉了 DSDT, 因为这个 DSDT 已经在新的 BIOS ROM 里边了。
+- `ACPI/Patched`: 添加回了 DSDT 。
 
 ### 还要补充一些:
 
