--- a/docs/读我.md
+++ b/docs/读我.md
@@ -20,6 +20,8 @@ Paypal : [paypal.me/cheneyveron](https://paypal.me/cheneyveron)
 
 2017/10/28: 添加多种CPU的变频SSDT，添加BIOS刷新工具。感谢rampagedev.com。
 
+2017/11/22: 修复10.13.1下安装时的`OsxAptioFixDrv`错误。
+
 推荐你升级俺的最新版本之前，先看变更历史。
 
 # 配置说明:
