--- a/docs/读我.md
+++ b/docs/读我.md
@@ -14,7 +14,7 @@ Paypal : [paypal.me/cheneyveron](https://paypal.me/cheneyveron)
 
 ## 变更历史:
 
-2017/09/30：[这里](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/变更说明-2017-09-30.md)
+详细变更说明：[这里](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/变更说明-2017-09-30.md)
 
 2017/10/10: 更新apfs.efi避免了开机界面打印Log。
 
@@ -28,9 +28,11 @@ Paypal : [paypal.me/cheneyveron](https://paypal.me/cheneyveron)
 
 ## 主板: 华南 X79 V2
 
-Bios 版本 2.46
+主板版本 2.46
 
-四叶草 版本 4220
+BIOS版本 2.47
+
+四叶草 版本 4292
 
 所有操作前，务必在BIOS中:
 
@@ -39,7 +41,7 @@ Bios 版本 2.46
 - 禁用 USB ECHI
 - 开启 USB XHCI
 
-本配置文件中的 `DSDT` 和 `SSDT` 非常珍贵，因为 CPU变频 和 驱动USB 需要用到他们。
+本配置文件中的 `x7947.ROM` 和 `SSDT` 非常珍贵，因为 CPU变频 和 驱动USB 需要用到他们。
 
 ## CPU: E5-2670 v1 C2
 
@@ -79,11 +81,13 @@ Dota2 十分流畅，我已经很满意了 :)
 
 但是在 High Sierra 中，你得开启 SIP 以后才能安装上 Web Driver。如果你不开启 SIP ，也可以强行继续安装，但是装好以后没有图形加速效果。
 
-在`drivers64UEFI `中添加`CsmVideoDxe-64.efi` 这个驱动以后 Clover 的系统选择菜单就能以 1080P 的分辨率显示了。
+~~在`drivers64UEFI `中添加`CsmVideoDxe-64.efi` 这个驱动以后 Clover 的系统选择菜单就能以 1080P 的分辨率显示了。~~
 
-但也有坏处，这样会拖慢启动时间大约4秒钟。
+~~但也有坏处，这样会拖慢启动时间大约4秒钟。~~
 
-如果你不在乎启动界面的分辨率而在乎启动速度，那就删了它。
+~~如果你不在乎启动界面的分辨率而在乎启动速度，那就删了它。~~
+
+现在ROM中直接添加了CsmVideoDxe模块，所以现在没有性能问题也能实现1080P输出了。
 
 ## 网卡: Rtl8100/8600
 
