--- a/docs/变更说明-2017-09-30.md
+++ b/docs/变更说明-2017-09-30.md
@@ -1,8 +1,6 @@
-# 更新记录(2017/09/30):
+# 详细变更:
 
-## 1. 对 HNX7946CV.rom 所做的变更
-
-- 注意，`HNX7946.rom`是原版BIOS.
+## 1. 对 x7947.rom 所做的变更
 
 - 替换了 DSDT 表，修复了 `AppleACPIPlatform _isspace panic` 与 `USB`.
 
@@ -14,21 +12,35 @@
 
 通过添加 SSDT ，变频档位增加到了8档 (1.2 / 1.9 / 2.3 / 2.6 / 3.0 / 3.1 / 3.2 / 3.3) 。
 
-- 重写了 `DMI` 信息.
+- 解除了内存和处理器频率限制。
 
-这样以后 AIDA64 / 鲁大师 会把这台电脑认作Mac Pro。
+内存可以超频到1866啦：）
 
-不用担心，它不会影响到 macOS 系统，因为 macOS 系统只会读取 Clover 中设置的 SMBIOS 信息。
+- 修改了开机Logo。
+- 继承了CsmVideoDxe。
 
-- 删除了 `FileSystem`，添加了 `HFSPlus` 与 `EnhancedFat`
+这下可以在UEFI界面下默认以1080P输出了。而且没有性能问题：）
 
-这样能带来更强的功能。
+- 添加了NVMe支持。
 
-### 如何刷新BIOS?
+但是俺没有NVMe硬盘，所以不知道兼容性如何。
+
+在这里感谢 @**flipphos** @**zouyanggary** @**jameszhang18910780315** 三位网友提供的BIOS方面的资讯。
+
+### 1.1 如何刷新BIOS?
 
 1. 制作一个DOS启动U盘。推荐使用 `USBWriter` 或 `UltraISO(已附带)` 将 `/attachments/BIOS/Tools/DOS-Maker/MSDOS7.10.iso` 镜像写入U盘。
 2. 复制 `/attachments/BIOS/Tools/FPT/fpt.exe` 刷新工具，将它和`/attachments/BIOS/ROM/X7946CV.ROM`一起放你的U盘.
 3. 启动U盘，进入DOS系统以后执行 `fpt -f X7946CV.ROM`即可。
+
+### 1.2 我的主板可以刷吗?
+
+经过与网友们的探讨和自己的实践发现：
+
+- 低版本的主板可以刷高版本的BIOS，即 2.45 - 2.47 版本的主板均可以刷 2.47 版本的BIOS。
+- 高版本的主板不能刷低版本的BIOS。即 2.47 版本的主板只能刷 2.47 版本的BIOS。
+- 所以现在只提供了 2.47 版本的BIOS。
+- 不同版本BIOS的 DSDT 不同，放错了DSDT可能导致奇怪的异常。
 
 ## 2. 对 Clover 做的变更
 
@@ -39,29 +51,29 @@
 - *Rt Variables*: `CsrActiveConfig` 设置成了 `0x00`, 即完全打开了 SIP (系统完整性保护).
 - `drivers64UEFI`: 添加了 `OsxAptioFix2Drv-free2000.efi` 从而 SIP 打开时能启动系统.
 - `driver64UEFI_Optional`: 可选的驱动，你可以从中选择一些来添加/替换。如果你不清楚该不该动，你就不要动。
-- `ACPI/Patched`: 添加回了 DSDT 。
+- `ACPI/Patched`: 移除了DSDT 。
 
-### 还要补充一些:
+### 2.1 还要补充一些:
 
 1. 如果你不刷BIOS的话，你得把 `/attachments/DSDT/dsdt.aml` 再放进 `/EFI/Clover/ACPI/patches`里边。
 2. 在 `drivers64UEFI`里边，俺不仅升级了现有驱动，还新增了一个 `apfs.efi`驱动。但是添加完它以后会闪一屏幕的代码再出来选系统的界面。所以如果你不需要 APFS 文件系统的话，可以删掉它来提升使用体验。
 3. 将 `VoodooHDA.kext` 升级到了 `2.9.0` ，已经支持 5.1 声道了。
 4. 如果你不刷BIOS的话，为了安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114)，你必须开启SIP，而一旦开启，CPU就不能变频了。 
 
-### 关于 SIP:
+### 2.2 关于 SIP:
 
 1. SIP的开关就是 `Rt Variables` 中的 `CsrActiveConfig`。
 2. 设置成 `0x00` 就是完全打开。
 3. `0x67` 就是完全禁止。
 4. 一旦完全打开SIP，你就得确保没有 **修改过**(打补丁也算) `/System/Library/Extensions` 下的任何驱动，也没有在其中 **安装** 任何未签名的驱动，***否则系统将无法启动！***
 
-### 关于 `config-no-web-drive.plist` 和 `config-web-drive.plist`:
+### 2.3 关于 `config-no-web-drive.plist` 和 `config.plist`:
 
 1. 唯一的区别就是 `config-web-drive.plist` 完全打开了 SIP.
    而`config-no-web-drive.plist` 完全关闭了 SIP.
 2. 要安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114) 就必须打开 SIP ，否则装了也无法正常工作.
 3. 我建议你全新安装High Sierra，因为你现在已有的系统很可能在你折腾CPU变频的时候就已经打补丁了，这样的话你用俺的新配置文件以后SIP就打开了，系统也就无法启动了.
 
-### 关于 Fusion Drive:
+### 2.4 关于 Fusion Drive:
 
 看 [这里](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/fusion-drive-设置.md)。
