--- a/docs/变更说明.md
+++ b/docs/变更说明.md
@@ -1,4 +1,4 @@
-# 详细变更:
+# 变更说明:
 
 ## 1. 对 x7947.rom 所做的变更
 
@@ -10,20 +10,21 @@
 
 现在你可以直接享受 Apple 原生的电源管理了，包括两档变频（1.2 与 3.0GHz）、睡眠唤醒等，而不需要对系统文件打**任何**补丁。
 
-通过添加 SSDT ，变频档位增加到了8档 (1.2 / 1.9 / 2.3 / 2.6 / 3.0 / 3.1 / 3.2 / 3.3) 。
+通过添加 SSDT ，变频档位增加到了5档，通过CPUFriend注入以后，达到了8档 (1.2 / 1.9 / 2.3 / 2.6 / 3.0 / 3.1 / 3.2 / 3.3) 。
 
+- 解禁了主板中隐藏的各项设置。
 - 解除了内存和处理器频率限制。
 
 内存可以超频到1866啦：）
 
-- 修改了开机Logo。
-- 继承了CsmVideoDxe。
+- 修改开机Logo为Apple。
+- 添加了CsmVideoDxe模块。
 
 这下可以在UEFI界面下默认以1080P输出了。而且没有性能问题：）
 
 - 添加了NVMe支持。
 
-但是俺没有NVMe硬盘，所以不知道兼容性如何。
+根据 @**zouyanggary** 反馈，NVMe似乎有一些问题。
 
 在这里感谢 @**flipphos** @**zouyanggary** @**jameszhang18910780315** 三位网友提供的BIOS方面的资讯。
 
@@ -42,6 +43,14 @@
 - 所以现在只提供了 2.47 版本的BIOS。
 - 不同版本BIOS的 DSDT 不同，放错了DSDT可能导致奇怪的异常。
 
+### 1.3 我的CPU是xxx，显卡是xxx，可以刷吗?
+
+可以。BIOS只与主板有关，与CPU、显卡、键鼠无关。
+
+### 1.4 刷了之后还能装Windows/Linux吗?
+
+可以。俺把DSDT中的USB命名/CPU部分规范了一下而已。
+
 ## 2. 对 Clover 做的变更
 
 - *版本*: 4297
@@ -57,8 +66,7 @@
 
 1. 如果你不刷BIOS的话，你得把 `/attachments/DSDT/dsdt.aml` 再放进 `/EFI/Clover/ACPI/patches`里边。
 2. 在 `drivers64UEFI`里边，俺不仅升级了现有驱动，还新增了一个 `apfs.efi`驱动。但是添加完它以后会闪一屏幕的代码再出来选系统的界面。所以如果你不需要 APFS 文件系统的话，可以删掉它来提升使用体验。
-3. 将 `VoodooHDA.kext` 升级到了 `2.9.0` ，已经支持 5.1 声道了。
-4. 如果你不刷BIOS的话，为了安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114)，你必须开启SIP，而一旦开启，CPU就不能变频了。 
+3. 如果你不刷BIOS的话，为了安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114)，你必须开启SIP，而一旦开启，你就无法对系统文件打补丁来解锁msr寄存器，从而CPU就不能变频了。 
 
 ### 2.2 关于 SIP:
 
