--- a/docs/变更说明.md
+++ b/docs/变更说明.md
@@ -2,6 +2,18 @@
 
 ## 1. 对 x7947.rom 所做的变更
 
+### !!!!!危险警告!!!!!
+
+此BIOS会锁定CPU访问区域，导致刷新后无法通过fpt工具再刷其他ROM，可能会因此失去保修，所以刷之前请自备编程器！
+
+BIOS ROM型号：EN25F64
+
+可用的编程器：CH341A 24 25
+
+某宝上可以在20元以下买到以上部件，所以别被骗了。
+
+### 详细变更如下
+
 - 替换了 DSDT 表，修复了 `AppleACPIPlatform _isspace panic` 与 `USB`.
 
 使用了这个ROM以后，你就不需要再用 Clover 给ACPI表打补丁了。
@@ -36,12 +48,20 @@
 
 ### 1.2 我的主板可以刷吗?
 
-经过与网友们的探讨和自己的实践发现：
+首先，只适用于：
+
+- 华南金牌主板（418块钱左右的）
+- ATX版型（大版型）
+- 蓝色主板表面
+
+不满足以上条件的主板，切勿刷！
+
+另外，对于满足条件的主板：
 
 - 低版本的主板可以刷高版本的BIOS，即 2.45 - 2.47 版本的主板均可以刷 2.47 版本的BIOS。
 - 高版本的主板不能刷低版本的BIOS。即 2.47 版本的主板只能刷 2.47 版本的BIOS。
 - 所以现在只提供了 2.47 版本的BIOS。
-- 不同版本BIOS的 DSDT 不同，放错了DSDT可能导致奇怪的异常。
+- 不同版本BIOS的 DSDT 不同，放错了DSDT可能导致奇怪的`nvram`异常。
 
 ### 1.3 我的CPU是xxx，显卡是xxx，可以刷吗?
 
