--- a/docs/变更说明.md
+++ b/docs/变更说明.md
@@ -40,13 +40,7 @@ BIOS ROM型号：EN25F64
 
 在这里感谢 @**flipphos** @**zouyanggary** @**jameszhang18910780315** 三位网友提供的BIOS方面的资讯。
 
-### 1.1 如何刷新BIOS?
-
-1. 制作一个DOS启动U盘。推荐使用 `USBWriter` 或 `UltraISO(已附带)` 将 `/attachments/BIOS/Tools/DOS-Maker/MSDOS7.10.iso` 镜像写入U盘。
-2. 复制 `/attachments/BIOS/Tools/FPT/fpt.exe` 刷新工具，将它和`/attachments/BIOS/ROM/X7946CV.ROM`一起放你的U盘.
-3. 启动U盘，进入DOS系统以后执行 `fpt -f X7946CV.ROM`即可。
-
-### 1.2 我的主板可以刷吗?
+### 1.1 我的主板可以刷吗?
 
 首先，只适用于：
 
@@ -54,7 +48,7 @@ BIOS ROM型号：EN25F64
 - ATX版型（大版型）
 - 蓝色主板表面
 
-不满足以上条件的主板，切勿刷！
+**!!!!!!!不满足以上条件的主板，切勿刷！!!!!!!!**
 
 另外，对于满足条件的主板：
 
@@ -63,45 +57,70 @@ BIOS ROM型号：EN25F64
 - 所以现在只提供了 2.47 版本的BIOS。
 - 不同版本BIOS的 DSDT 不同，放错了DSDT可能导致奇怪的`nvram`异常。
 
-### 1.3 我的CPU是xxx，显卡是xxx，可以刷吗?
+### 1.2 如何刷新BIOS?
 
-可以。BIOS只与主板有关，与CPU、显卡、键鼠无关。
+1. 制作一个DOS启动U盘。推荐使用 `USBWriter` 或 `UltraISO(已附带)` 将 `/attachments/BIOS/Tools/DOS-Maker/MSDOS7.10.iso` 镜像写入U盘。
+2. 复制 `/attachments/BIOS/Tools/FPT/fpt.exe` 刷新工具，将它和`/attachments/BIOS/ROM/X7947.ROM`一起放你的U盘.
+3. 启动U盘，进入DOS系统以后执行 `fpt -f X7947.ROM`即可。
 
-### 1.4 刷了之后还能装Windows/Linux吗?
+### 1.3 我想自己改BIOS？
 
-可以。俺把DSDT中的USB命名/CPU部分规范了一下而已。
+俺在俺的博客上写了一篇修改说明，[传送门](https://www.itmanbu.com/ami-bios-modification.html)。
 
 ## 2. 对 Clover 做的变更
 
 - *版本*: 4297
 - *ACPI*: 添加回了 ACPI 的USB等补丁.
 - *KextToPatch*: 保留了 Trim / Icon / AICPM 补丁.
-- *Gui*: 添加了启动项 `Install High Sierra!!!!`, 去掉了所有隐藏目录。这样一来，你就可以在 Fusion Drive上安装 macOS 了。
-- *Rt Variables*: `CsrActiveConfig` 设置成了 `0x00`, 即完全打开了 SIP (系统完整性保护).
+- *Gui*: 添加了启动项 `Install Fusion!!!!`和`Boot Fusion!!!`，去掉了所有隐藏目录。这样一来，你就可以在 Fusion Drive上安装和启动 macOS 了。
+- *Rt Variables*: `CsrActiveConfig` 在`config-NVIDIA-card.plist`中设置成了 `0x00`，在`config-AMD-card.plist`中设置成了`0x67`, 前者完全打开，后者完全关闭了 SIP (系统完整性保护)。
 - `drivers64UEFI`: 添加了 `OsxAptioFix2Drv-free2000.efi` 从而 SIP 打开时能启动系统.
 - `driver64UEFI_Optional`: 可选的驱动，你可以从中选择一些来添加/替换。如果你不清楚该不该动，你就不要动。
 - `ACPI/Patched`: 移除了DSDT 。
 
-### 2.1 还要补充一些:
-
-1. 如果你不刷BIOS的话，你得把 `/attachments/DSDT/dsdt.aml` 再放进 `/EFI/Clover/ACPI/patches`里边。
-2. 在 `drivers64UEFI`里边，俺不仅升级了现有驱动，还新增了一个 `apfs.efi`驱动。但是添加完它以后会闪一屏幕的代码再出来选系统的界面。所以如果你不需要 APFS 文件系统的话，可以删掉它来提升使用体验。
-3. 如果你不刷BIOS的话，为了安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114)，你必须开启SIP，而一旦开启，你就无法对系统文件打补丁来解锁msr寄存器，从而CPU就不能变频了。 
-
-### 2.2 关于 SIP:
+### 2.1 关于 SIP:
 
 1. SIP的开关就是 `Rt Variables` 中的 `CsrActiveConfig`。
 2. 设置成 `0x00` 就是完全打开。
 3. `0x67` 就是完全禁止。
 4. 一旦完全打开SIP，你就得确保没有 **修改过**(打补丁也算) `/System/Library/Extensions` 下的任何驱动，也没有在其中 **安装** 任何未签名的驱动，***否则系统将无法启动！***
+5. 在macOS High Sierra中，你必须打开SIP才能安装上NVIDIA Web Drvier，否则即使装上了也没有图形加速效果。
+6. 综合上面的4和5，如果要让处理器变频，除非BIOS中已经解锁了msr寄存器，否则必须给系统打补丁。而一旦打补丁，再开启SIP就会导致系统无法启动。
 
-### 2.3 关于 `config-no-web-drive.plist` 和 `config.plist`:
+### 2.2 关于处理器变频：
 
-1. 唯一的区别就是 `config-web-drive.plist` 完全打开了 SIP.
-   而`config-no-web-drive.plist` 完全关闭了 SIP.
-2. 要安装`NVIDIA Web Driver`(版本号 378.10.10.10.15.114) 就必须打开 SIP ，否则装了也无法正常工作.
-3. 我建议你全新安装High Sierra，因为你现在已有的系统很可能在你折腾CPU变频的时候就已经打补丁了，这样的话你用俺的新配置文件以后SIP就打开了，系统也就无法启动了.
+x79的变频需要满足这些条件：
 
-### 2.4 关于 Fusion Drive:
+1. 主板上的msr寄存器需要解锁。
+2. 需要在x86PlatformPlugin.kext中注入macmini6,2的变频向量。
+3. 需要在对AppleIntelCPUPowerManagement.kext打补丁。
+
+#### 2.2.1 解锁msr寄存器
+
+俺的BIOS ROM中已经解锁了。
+
+如果不刷BIOS，那么需要运行`AICPMPatch`来解锁。
+
+但是请注意，一旦开启了SIP你就不可以运行上面的解锁补丁了。
+
+#### 2.2.2 在x86PlatformPlugin.kext中注入macmini6,2的变频向量
+
+俺在`kexts`中放了`CPUFriend.kext`和`CPUFriendProvider.kext`，这两个即可注入变频向量。
+
+如果不使用CPUFriend来注入，你也可以将`X79PlatformPlugin.kext`放到`/System/Library/Extensions`目录中。
+
+同样请注意，一旦开启了SIP你就不可以放`X79PlatformPlugin.kext`了，不影响使用CPUFriend来注入。
+
+#### 2.2.3 对AppleIntelCPUPowerManagement.kext打补丁
+
+上面这个kext简称AICPM.kext。
+
+俺在`Clover -> Kernel and Kexts Patches`中添加了针对`10.12`和`10.13`两个系统的AICPM.kext的补丁，所以就不需要你手动打补丁了。
+
+你还可以手动运行`10.x aicpm patch.command`来打补丁。
+
+同样请注意，一旦开启了SIP你就不可以运行命令来打补丁了，使用Clover的Patch功能不影响。
+
+### 2.3 关于 Fusion Drive:
 
 看 [这里](https://github.com/cheneyveron/clover-x79-e5-2670-gtx650/blob/master/docs/fusion-drive-设置.md)。
