--- a/docs/变更说明.md
+++ b/docs/变更说明.md
@@ -16,6 +16,8 @@ BIOS ROM型号：EN25F64
 
 - 替换了 DSDT 表，修复了 `AppleACPIPlatform _isspace panic` 与 `USB`.
 
+具体就是，重命名`EUSB -> EH01`，`USBE -> EH02`，删除了包含`CUU0-3`的四行。
+
 使用了这个ROM以后，你就不需要再用 Clover 给ACPI表打补丁了。
 
 - 解锁了 `msr` 寄存器。
@@ -46,7 +48,7 @@ BIOS ROM型号：EN25F64
 
 - 华南金牌主板（418块钱左右的）
 - ATX版型（大版型）
-- 蓝色主板表面
+- 蓝色内存插槽
 
 **!!!!!!!不满足以上条件的主板，切勿刷！!!!!!!!**
 
@@ -89,11 +91,12 @@ BIOS ROM型号：EN25F64
 
 ### 2.2 关于处理器变频：
 
-x79的变频需要满足这些条件：
+x79的变频需要满足这些先决条件：
 
 1. 主板上的msr寄存器需要解锁。
 2. 需要在x86PlatformPlugin.kext中注入macmini6,2的变频向量。
 3. 需要在对AppleIntelCPUPowerManagement.kext打补丁。
+4. 需要有对应处理器的SSDT。
 
 #### 2.2.1 解锁msr寄存器
 
@@ -120,6 +123,10 @@ x79的变频需要满足这些条件：
 你还可以手动运行`10.x aicpm patch.command`来打补丁。
 
 同样请注意，一旦开启了SIP你就不可以运行命令来打补丁了，使用Clover的Patch功能不影响。
+
+#### 2.2.4 对应的SSDT
+
+推荐使用`ssdtGen`生成。
 
 ### 2.3 关于 Fusion Drive:
 
