--- a/docs/变更说明.md
+++ b/docs/变更说明.md
@@ -6,6 +6,8 @@
 
 此BIOS会锁定CPU访问区域，导致刷新后无法通过fpt工具再刷其他ROM，可能会因此失去保修，所以刷之前请自备编程器！
 
+### !!!!!警告完毕!!!!!
+
 BIOS ROM型号：EN25F64
 
 可用的编程器：CH341A 24 25
@@ -40,8 +42,6 @@ BIOS ROM型号：EN25F64
 
 根据 @**zouyanggary** 反馈，NVMe似乎有一些问题。
 
-在这里感谢 @**flipphos** @**zouyanggary** @**jameszhang18910780315** 三位网友提供的BIOS方面的资讯。
-
 ### 1.1 我的主板可以刷吗?
 
 首先，只适用于：
@@ -71,7 +71,7 @@ BIOS ROM型号：EN25F64
 
 ## 2. 对 Clover 做的变更
 
-- *版本*: 4297
+- *版本*: 4359
 - *ACPI*: 添加回了 ACPI 的USB等补丁.
 - *KextToPatch*: 保留了 Trim / Icon / AICPM 补丁.
 - *Gui*: 添加了启动项 `Install Fusion!!!!`和`Boot Fusion!!!`，去掉了所有隐藏目录。这样一来，你就可以在 Fusion Drive上安装和启动 macOS 了。
@@ -112,7 +112,7 @@ x79的变频需要满足这些先决条件：
 
 如果不使用CPUFriend来注入，你也可以将`X79PlatformPlugin.kext`放到`/System/Library/Extensions`目录中。
 
-同样请注意，一旦开启了SIP你就不可以放`X79PlatformPlugin.kext`了，不影响使用CPUFriend来注入。
+同样请注意，一旦开启了SIP你就不可以放`X79PlatformPlugin.kext`了，不过使用CPUFriend不受此影响。
 
 #### 2.2.3 对AppleIntelCPUPowerManagement.kext打补丁
 
@@ -122,7 +122,7 @@ x79的变频需要满足这些先决条件：
 
 你还可以手动运行`10.x aicpm patch.command`来打补丁。
 
-同样请注意，一旦开启了SIP你就不可以运行命令来打补丁了，使用Clover的Patch功能不影响。
+同样请注意，一旦开启了SIP你就不可以运行命令来打补丁了，不过使用Clover的Patch功能不影响。
 
 #### 2.2.4 对应的SSDT
 
