--- a/docs/变更说明.md
+++ b/docs/变更说明.md
@@ -52,11 +52,7 @@ BIOS ROM型号：EN25F64
 
 ### 1.1 我的主板可以刷吗?
 
-首先，只适用于：
-
-- 华南金牌主板（418块钱左右的）
-- ATX版型（大版型）
-- 蓝色内存插槽
+只适用于PCIE槽旁边印有 **华南金牌v2.4x** 字样的主板。
 
 **!!!!!!!不满足以上条件的主板，切勿刷！!!!!!!!**
 
@@ -79,7 +75,7 @@ BIOS ROM型号：EN25F64
 
 ## 2. 对 Clover 做的变更
 
-- *版本*: 4920
+- *版本*: 5099
 - *ACPI*: 添加回了 ACPI 的USB等补丁.
 - *KextToPatch*: 保留了 Trim / Icon / AICPM 补丁.
 - *Gui*: 添加了启动项 `Install Fusion!!!!`和`Boot Fusion!!!`，去掉了所有隐藏目录。这样一来，你就可以在 Fusion Drive上安装和启动 macOS 了。
